# App

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.ts  README.md  config.yml  data  docker-compose.yml  pyproject.toml
protos/: pools.proto
scripts/: _utils.py  analytic.py
solana_snipping/: _utils.py  cache.py  config.py  constants.py  logs.py  main.py  solana_strategies.py  tg.py
solana_snipping/backend/: utils.py
solana_snipping/backend/blockchain/: pools.py
solana_snipping/backend/db/: __init__.py  repositories.py
solana_snipping/backend/proto_generated/: pools.py
solana_snipping/backend/solana/: __init__.py  audit.py  monitor.py  moonshot_api.py  solscan.py  strategies.py  wallets.py
solana_snipping/backend/solana/raydium/: __init__.py
solana_snipping/blockchain/: explorers.py  pools.py
solana_snipping/common/: app_types.py  config.py  constants.py  types.py
solana_snipping/frontend/telegram/: alerting.py
solana_snipping/visualizate/: __init__.py
ts/: client.ts  connection_pool.ts  jupiter_dex.ts  main.ts  package-lock.json  package.json  pools.ts  raydium_dex.ts  server.ts  test.html  token_utils.ts  trade_utils.ts  wallet_utils.ts
ts/generated_ts_proto/: pools.ts
