[tool.poetry]
name = "solana-snipping"
version = "0.1.0"
description = ""
authors = ["Daniil Tolmachev <dev.tolmachev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
solana = "^0.34.3"
asyncstdlib = "^3.12.4"
pysolscan = "^0.0.6"
requests = "^2.32.3"
pandas = "^2.2.2"
streamlit = "^1.37.1"
gql = "^3.5.0"
loguru = "^0.7.2"
aiogram = "^3.12.0"
envyaml = "^1.10.211231"
httpx = "^0.27.0"
plotly = "^5.23.0"
mplfinance = "^0.12.10b0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
